added html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
 <!-- . -->
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>FunFoods</title>
+  <meta name="description" lang="en" content="funfoods veg-mayo makes boaring sandwich into tasty sandwicheto">
+  <meta name="keywords" lang="en" content="funfoods, tasty sandwich, easy to apply, quick to make">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="stylesheet" media="screen" href="assets/css/style.css">
+</head>
+
+<body>
+  <!--container starts here-->
+  <div class="container">
+    <!--header starts here-->
+    <header>
+    </header>
+    <!--header ends here-->
+    <!--main starts here-->
+    <main>
+      <div class="animation">
+        <div class="background">
+          <img src="assets/images/bg.jpg" alt="background">
+        </div>
+        <div class="logo-img">
+          <img src="assets/images/logo.png" alt="logo">
+        </div>
+        <div class="table">
+          <img src="assets/images/table.jpg" alt="table">
+        </div>
+        <div class="plate">
+          <img src="assets/images/plate.png" alt="plate">
+        </div>
+        <div class="sonali">
+          <img src="assets/images/sad_sonali.png" alt="sonali">
+        </div>
+        <div class="text">
+          <p>Boring</p>
+          <p>Sandwich</p>
+        </div>
+        <div class="sandwich1">
+          <img src="assets/images/sandwich_1.png" alt="">
+        </div>
+        <div class="sandwich2">
+          <img src="assets/images/sandwich_2.png" alt="">
+        </div>
+        <div class="sandwich3">
+          <img src="assets/images/sandwich_3.png" alt="">
+        </div>
+        <div class="mayo">
+          <img src="assets/images/mayo.png" alt="">
+        </div>
+        <div class="knife">
+          <img src="assets/images/knife.png" alt="">
+        </div>
+        <div class="happy">
+          <img src="assets/images/happy_sonali.png" alt="">
+        </div>
+        <div class="text2">
+          <p>Ban Gaya</p>
+          <p>Sandwicheto!</p>
+        </div>
+        <div class="text3">
+          <p>FunFoods</p>
+          <p>Veg Mayo Ke Saath</p>
+        </div>
+        <div class="chef">
+          <img src="assets/images/chef.png" alt="">
+        </div>
+        <div class="text4">
+          <p>Food Mein</p>
+          <p>Daalo Magic</p>
+        </div>
+        <div class="veg-mayo">
+          <img src="assets/images/veg_mayo.png" alt="">
+        </div>
+        <div class="hat">
+          <img src="assets/images/hat.png" alt="">
+        </div>
+        <div class="text5">
+          <p>Get Recipe</p>
+        </div>
+      </div>
+    </main>
+    <!--main ends here-->
+    <!--footer starts here-->
+    <footer>
+    </footer>
+    <!--footer ends here-->
+  </div>
+  <!--container ends here-->
+
+</body>
+
+</html>
